--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "maple",
   "version": "0.0.0",
   "description": "webapp toolset",
-  "main": "index.js",
+  "main": "maple.js",
   "scripts": {
     "test": "make test"
   },
