--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "brickjs",
-  "version": "0.1.2",
-  "description": "MVVM bricks to create real time and large scale applications in a flash",
+  "version": "0.2.0",
+  "description": "MVVM building block to create real time and large scale applications in a flash",
   "main": "index.js",
   "scripts": {
     "test": "zuul -- test/*.js",
