--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "datastore": "^1.0.0",
     "cement": "^0.3.1",
     "looping": "^1.0.0",
-    "many": "^0.3.2"
+    "many": "^0.3.2",
+    "stomach": "^0.1.0"
   },
   "devDependencies": {
     "mocha": "~1.17.1",
