--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   },
   "dependencies": {
     "datastore": "^1.0.6",
-    "stomach": "^0.1.0"
+    "stomach": "^0.1.0",
+    "cement": "^0.4.0"
   },
   "devDependencies": {
     "mocha": "~1.17.1",
