--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "dependencies": {
     "datastore": "^1.0.6",
     "stomach": "^0.1.0",
-    "cement": "^0.4.0"
+    "cement": "^0.4.0",
+    "many": "^0.3.3"
   },
   "devDependencies": {
     "mocha": "~1.17.1",
