--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "zuul -- test/*.js",
     "test-local": "zuul --local -- test/*.js",
-    "standalone": "component build --standalone brick --name brick --out ."
+    "standalone": "component build --standalone brick --name brick --out .",
+    "test-server" : "mocha test/server.js"
   },
   "repository": {
     "type": "git",
@@ -34,7 +35,8 @@
     "mouth": "^0.1.2"
   },
   "devDependencies": {
-    "mocha": "~1.17.1",
+    "mocha": "^2.2.5",
+    "roof": "git://github.com/bredele/roof",
     "zuul": "~1.5.4"
   }
 }
