--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cement": "git://github.com/bredele/cement",
     "datastore": "git://github.com/bredele/datastore",
     "grout": "git://github.com/bredele/grout",
+    "mouth": "git://github.com/bredele/mouth",
     "stomach": "git://github.com/bredele/stomach"
   },
   "devDependencies": {
