remove stateful handlers

--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
   "dependencies": {
     "cement": "git://github.com/bredele/cement",
     "datastore": "git://github.com/bredele/datastore",
+    "fragment": "git://github.com/bredele/fragment",
     "grout": "git://github.com/bredele/grout",
+    "many": "git://github.com/bredele/many",
     "mouth": "git://github.com/bredele/mouth",
     "stomach": "git://github.com/bredele/stomach"
   },
