remove cement dependency temporarily

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "zuul -- test/*.js",
     "test-local": "zuul --local -- test/*.js",
     "standalone": "component build --standalone brick --name brick --out .",
-    "test-server" : "mocha test/server.js"
+    "test-server": "mocha test/server.js"
   },
   "repository": {
     "type": "git",
@@ -28,11 +28,11 @@
     "url": "https://github.com/bredele/brick/issues"
   },
   "dependencies": {
-    "datastore": "^1.1.1",
-    "stomach": "^0.1.1",
-    "cement": "^0.4.0",
-    "many": "^1.0.2",
-    "mouth": "^0.1.2"
+    "datastore": "git://github.com/bredele/datastore",
+    "domwalk": "git://github.com/bredele/domwalk",
+    "many": "git://github.com/bredele/many",
+    "mouth": "git://github.com/bredele/mouth",
+    "stomach": "git://github.com/bredele/stomach"
   },
   "devDependencies": {
     "mocha": "^2.2.5",
