--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.9.0",
   "description": "MVVM building block to create real time and large scale applications in a flash",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test" : "browserify test/*.js | tape-run"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/bredele/brick.git"
