--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MVVM building block to create real time and large scale applications in a flash",
   "main": "index.js",
   "scripts": {
-    "test" : "browserify test/*.js | tape-run"
+    "test": "browserify test/*.js | tape-run"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,9 @@
   "bugs": {
     "url": "https://github.com/bredele/brick/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "datastore": "^1.1.1"
+  },
   "devDependencies": {
     "browserify": "^13.1.0",
     "tape": "^4.6.0",
