--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "browserify": "^13.1.0",
+    "promises-a": "^2.3.0",
     "tape": "^4.6.0",
     "tape-run": "^2.1.4"
   }
