--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "url": "https://github.com/bredele/legoh/issues"
   },
   "dependencies": {
-    "datastore": "^1.8.2"
+    "datastore": "^1.8.2",
+    "domwalk": "^1.1.0"
   },
   "devDependencies": {
     "browserify": "^13.1.1",
